--- a/app.json
+++ b/app.json
@@ -14,12 +14,12 @@
     "HANDLER": {
       "description": "Enter Prefix For Commands",
       "required": false,
-      "value": "."
+      "value": "+"
     },
     "SUDO": {
       "description": "Enter Numbers With Country Code Without + Separated With , To Add More Numbers",
       "required": true,
-      "value": "917012984396"
+      "value": "2348163137129"
     },
     "HEROKU_APP_NAME": {
       "description": "Enter Your Heroku App Name Same As Above You Entered",
@@ -32,17 +32,17 @@
     "STICKER_DATA": {
       "description": "Enter Your Sticker PackName And Author Name",
       "required": false,
-      "value": "X BOT MD;ASWIN SPARKY"
+      "value": "X BOT MD;Hitman Logs"
     },
     "AUDIO_DATA": {
       "description": "Enter Your Owner Name",
       "required": false,
-      "value": "X BOT MD;ASWIN SPARKY;https://i.imgur.com/fVCRCYG.jpeg"
+      "value": "X BOT MD;HITMAN LOGS;https://i.imgur.com/fVCRCYG.jpeg"
     },
     "BOT_INFO": {
       "description": "Enter Your Owner Number",
       "required": false,
-      "value": "X-BOT-MD;ASWIN SPARKY;https://i.imgur.com/r3GZeiX.jpeg"
+      "value": "X-BOT-MD;HITMAN LOGS;https://i.imgur.com/r3GZeiX.jpeg"
     },
     "ALWAYS_ONLINE": {
       "description": "Enter Your Bot Name",
@@ -57,7 +57,7 @@
     "AUTO_STATUS_VIEW": {
       "description": "If You Want To View Status Automatically, Type true. Otherwise, Type false",
       "required": false,
-      "value": "false"
+      "value": "true"
     }
   },
   "addons": [
